Fix scroll position jumping when opening note modals - Save and restore scroll position when modals open/close

--- a/src/styles.css
+++ b/src/styles.css
@@ -2878,6 +2878,8 @@ body.modal-open {
     position: fixed;
     width: 100%;
     height: 100%;
+    left: 0;
+    right: 0;
 }
 
 /* Note Viewer Modal Overlay */
